--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">PlanerMRP</string>
+    <string name="login">Login</string>
+    <string name="haslo">Hasło</string>
+    <string name="zaloguj">Zaloguj</string>
 </resources>
