--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,18 @@
         \n\n- Security code podany na odwrocie karty.</string>
     <string name="autorzy">Autorzy</string>
     <string name="NazwiskaAutor">Daniel Kucharczyk\nMariusz Nowak</string>
+    <string name="dzien">Dzień</string>
+    <string name="przewidywany_popyt">Przewidywany Popyt</string>
+    <string name="produkcja">Produkcja</string>
+    <string name="_1">1</string>
+    <string name="_2">2</string>
+    <string name="_3">3</string>
+    <string name="_4">4</string>
+    <string name="_5">5</string>
+    <string name="_6">6</string>
+    <string name="_7">7</string>
+    <string name="_8">8</string>
+    <string name="_9">9</string>
+    <string name="_10">10</string>
+
 </resources>
