--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,5 +47,6 @@
     <string name="_8">8</string>
     <string name="_9">9</string>
     <string name="_10">10</string>
+    <string name="dost_pne">Dostępne</string>
 
 </resources>
