Tworzenie planu - pobieranie danych [popyt i produkcja i dostepne]

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,5 +48,6 @@
     <string name="_9">9</string>
     <string name="_10">10</string>
     <string name="dost_pne">Dostępne</string>
+    <string name="stw_rz_plan">Stwórz plan</string>
 
 </resources>
