--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,9 +4,9 @@
     <string name="haslo">Hasło</string>
     <string name="zaloguj">Zaloguj</string>
     <string name="logowanie_label">Wpisz swoje dane logowania:</string>
-    <string name="stworz_plan">Zaprojektuj nowy plan produkcji wybranego produktu</string>
-    <string name="wpis_do_bazy">Dodaj nowy materiał, półprodukt, produkt do bazy danych</string>
-    <string name="informacje">Informacje o programie</string>
+    <string name="stworz_plan">Stwórz Plan</string>
+    <string name="wpis_do_bazy">Dodaj Przedmiot</string>
+    <string name="informacje">O aplikacji</string>
     <string name="powitanie">Witaj!</string>
     <string name="ekran_glowny">Co chciałbyś zrobić:</string>
     <string name="typ_produktu_label">Typ produktu:</string>
@@ -49,5 +49,7 @@
     <string name="_10">10</string>
     <string name="dost_pne">Dostępne</string>
     <string name="stw_rz_plan">Stwórz plan</string>
+    <string name="opis_przyciskow">Tap for information</string>
+
 
 </resources>
